Fix double border on nav

--- a/css/main.sass
+++ b/css/main.sass
@@ -74,6 +74,7 @@ a
     border-bottom: 1px solid #eee
   .navbar-ctc
     background-color: white
+    border-bottom: 0px solid #eee
 
 .carousel-control
   width: 10%
